2000-04-15  Gerd Moellmann  <gerd@gnu.org>

	* gud.el (gud-jdb-build-source-files-list): Change file-exists-p
	to file-directory-p.

2000-04-14  Gerd Moellmann  <gerd@gnu.org>

	* gud.el (gud-jdb-build-source-files-list): Check that directory
	exists before calling directory-files.

2000-04-13  Dave Love  <fx@gnu.org>

	* emacs-lisp/trace.el: Change maintainer.  Use new backquote
	syntax.

	* emacs-lisp/cl-specs.el: Remove when, unless.

	* emacs-lisp/cl-extra.el: Don't quote keywords.
	(cl-old-mapc): New variable.
	(mapc): Use it.
	(cl-map-intervals): Use with-current-buffer.  Don't check for
	next-property-change.
	(cl-map-overlays): Use with-current-buffer.
	(cl-expt): Remove.
	(copy-tree, remprop): Define unconditionally.

	* emacs-lisp/cl-compat.el (keywordp): Remove.

	* emacs-lisp/edebug.el (edebug-keywordp): Remove.  Change callers
	to use keywordp.
	(edebug-spec): Enable keywordp.

	* cus-edit.el (custom-sort-items): Avoid symbol-name with new
	string-lessp.

	* cus-start.el: Use keywordp.

2000-04-13  Edward M. Reingold  <reingold@emr.cs.uiuc.edu>

	* diary-lib.el (include-other-diary-files): Fix the fix of
	2000-02-18 by doing a save-excursion.

2000-04-13  Vinicius Jose Latorre  <vinicius@cpqd.com.br>

	* ps-print.el: Customization fix, doc fix.
	(ps-print-version): New version number (5.1.4).
	(ps-article-author, ps-article-subject, ps-info-file, ps-info-node)
	(ps-print-preprint): Adjust code.
	(ps-printer-name, ps-lpr-switches, ps-user-defined-prologue)
	(ps-print-prologue-header, ps-print-control-characters)
	(ps-spool-config): Customization fix.
	
2000-04-13  Eli Zaretskii  <eliz@is.elta.co.il>

	* textmodes/ispell.el (ispell-menu-map): Menu items rearranged and
	converted to the new menu-item format, names silightly changed,
	help strings added.

	Support for spelling without async subprocesses:

	* textmodes/ispell.el (ispell-cmd-args, ispell-output-buffer)
	(ispell-session-buffer): New variables.
	(ispell-start-process, ispell-process-status,